--- a/creative.css
+++ b/creative.css
@@ -65,6 +65,46 @@ p {
   font-size: 1.3em;
 }
 
-#marginTopAboutContent {
+#skillsPage {
+  background-color: #E5E5E5;
+  width: 100%;
+}
 
+#skillsPage h1 {
+  margin-top: 90px;
+  margin-bottom: -10px;
+  font-size: 3em;
+  text-align: center;
+}
+
+#skillsPage h2 {
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.progressBarLabel {
+  position: relative;
+  float: left;
+  padding-left: 5px;
+}
+
+.progress {
+  border: 1px solid black;
+}
+
+.progress-bar-yellow {
+  background: #FFE580;
+}
+
+.progress-bar-lightBlue {
+  background: #6F918A;
+}
+
+.progress-bar-purple {
+  background: #A6A6FF;
+}
+
+#skillsPage h3 {
+  margin-top: -10px;
+  text-align: center;
 }
