--- a/creative.css
+++ b/creative.css
@@ -44,20 +44,14 @@ p {
     font-weight: bold;
 }
 
-.circleImage {
+#aboutPage img {
   width: 300px;
   border-radius: 150px;
-}
-
-.marginTopCircleImage {
   margin-top: 180px;
 }
 
-.marginTopContent {
-  margin-top: 210px;
-}
-
 #aboutPage h1 {
+  margin-top: 235px;
   font-size: 2.5em;
 }
 
@@ -65,19 +59,19 @@ p {
   font-size: 1.3em;
 }
 
-#skillsPage {
+#knowledgePage {
   background-color: #E5E5E5;
   width: 100%;
 }
 
-#skillsPage h1 {
-  margin-top: 90px;
+#knowledgePage h1 {
+  margin-top: 70px;
   margin-bottom: -10px;
   font-size: 3em;
   text-align: center;
 }
 
-#skillsPage h2 {
+#knowledgePage h2 {
   text-align: center;
   padding-bottom: 10px;
 }
@@ -104,7 +98,7 @@ p {
   background: #A6A6FF;
 }
 
-#skillsPage h3 {
+#knowledgePage h3 {
   margin-top: -10px;
   text-align: center;
 }
